package com.hardway.gdtest.domain.entities.parts.interfaces;

interface SecondPartInterface {
    fun filter(input: Array<Int>): Array<Int>
}